<resources>
    <string name="app_name">"Calculo Notas "</string>
    <string name="DesarrolloMovil">DesarrolloMovil</string>
    <string name="nota1">Nota1 </string>
    <string name="nota2">Nota2 </string>
    <string name="nota3">Nota3 </string>
    <string name="Matematicas">Matematicas </string>
    <string name="Definitiva">Definitiva </string>
    <string name="Ingenieriadesoftware">IngenieriaSoftware </string>
    <string name="CalcularNotaTotalSemestre">Calcular Nota Total Semestre </string>
    <string name="AcercaDe">Acerca De</string>
    <string name="ElpromedioTotaldetodaslasmateriases"> El promedio Total de todas las materias es</string>



    

</resources>
